--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/app-rate": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/native-storage": "^4.5.3",
+    "@ionic-native/screen-orientation": "^4.5.3",
     "@ionic-native/secure-storage": "^4.5.3",
     "@ionic-native/shake": "^4.5.3",
     "@ionic-native/splash-screen": "^4.4.0",
@@ -33,13 +35,19 @@
     "chart.js": "^2.7.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-device-motion": "^2.0.0",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-globalization": "^1.0.9",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic": "^4.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -70,7 +78,9 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-shake": {}
+      "cordova-plugin-shake": {},
+      "cordova-plugin-secure-storage": {},
+      "cordova-plugin-apprate": {}
     },
     "platforms": [
       "android",
