--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/app-rate": "^4.5.3",
+    "@ionic-native/app-version": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/device": "^4.5.3",
+    "@ionic-native/email-composer": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/native-storage": "^4.5.3",
@@ -35,10 +38,12 @@
     "chart.js": "^2.7.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-device-motion": "^2.0.0",
     "cordova-plugin-dialogs": "^2.0.1",
+    "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-globalization": "^1.0.9",
     "cordova-plugin-inappbrowser": "^2.0.2",
@@ -80,7 +85,9 @@
       },
       "cordova-plugin-shake": {},
       "cordova-plugin-secure-storage": {},
-      "cordova-plugin-apprate": {}
+      "cordova-plugin-apprate": {},
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android",
