--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "app.Verbruiksmanager",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "G van Limbeek",
+  "homepage": "https://gvanlimbeek.nl",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -29,6 +29,7 @@
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/native-storage": "^4.5.3",
+    "@ionic-native/push": "^4.5.3",
     "@ionic-native/screen-orientation": "^4.5.3",
     "@ionic-native/secure-storage": "^4.5.3",
     "@ionic-native/shake": "^4.5.3",
@@ -38,6 +39,7 @@
     "chart.js": "^2.7.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-apprate": "^1.3.0",
     "cordova-plugin-device": "^2.0.1",
@@ -50,9 +52,7 @@
     "cordova-plugin-ionic": "^4.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-nativestorage": "^2.3.1",
     "cordova-plugin-screen-orientation": "^3.0.1",
-    "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -61,6 +61,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ng2-charts": "^1.6.0",
+    "phonegap-plugin-push": "^2.1.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -69,7 +70,7 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project",
+  "description": "Verbruiksmanager app",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
@@ -78,16 +79,17 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-nativestorage": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-plugin-shake": {},
-      "cordova-plugin-secure-storage": {},
       "cordova-plugin-apprate": {},
       "cordova-plugin-email-composer": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "phonegap-plugin-push": {
+        "FCM_VERSION": "11.6.2"
+      }
     },
     "platforms": [
       "android",
