--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app.Verbruiksmanager",
+  "name": "app.verbruiksmanager.com",
   "version": "0.0.1",
   "author": "G van Limbeek",
   "homepage": "https://gvanlimbeek.nl",
