--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "app.Verbruiksmanager",
+  "name": "app.verbruiksmanager.apk",
   "app_id": "34645d4a",
   "type": "ionic-angular",
   "integrations": {
