--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app.verbruiksmanager.com",
+  "name": "app.verbruiksmanager.apk",
   "version": "0.0.1",
   "author": "G van Limbeek",
   "homepage": "https://gvanlimbeek.nl",
@@ -28,6 +28,7 @@
     "@ionic-native/email-composer": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
+    "@ionic-native/local-notifications": "^4.5.3",
     "@ionic-native/native-storage": "^4.5.3",
     "@ionic-native/push": "^4.5.3",
     "@ionic-native/screen-orientation": "^4.5.3",
@@ -42,6 +43,7 @@
     "cordova-ios": "4.5.4",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-apprate": "^1.3.0",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-device-motion": "^2.0.0",
     "cordova-plugin-dialogs": "^2.0.1",
@@ -52,6 +54,7 @@
     "cordova-plugin-ionic": "^4.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -70,7 +73,7 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "Verbruiksmanager app",
+  "description": "Verbruiksanager app",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
@@ -88,8 +91,10 @@
       "cordova-plugin-email-composer": {},
       "cordova-plugin-app-version": {},
       "phonegap-plugin-push": {
+        "SENDER_ID": "824350061771",
         "FCM_VERSION": "11.6.2"
-      }
+      },
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android",
