--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
-    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -64,7 +63,6 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ng2-charts": "^1.6.0",
-    "phonegap-plugin-push": "^2.1.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -90,15 +88,8 @@
       "cordova-plugin-apprate": {},
       "cordova-plugin-email-composer": {},
       "cordova-plugin-app-version": {},
-      "phonegap-plugin-push": {
-        "SENDER_ID": "824350061771",
-        "FCM_VERSION": "11.6.2"
-      },
       "cordova-plugin-local-notification": {}
     },
-    "platforms": [
-      "android",
-      "browser"
-    ]
+    "platforms": []
   }
 }
