--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/splash-screen": "^4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
+    "angular2-highcharts": "^0.5.5",
     "chart.js": "^2.7.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
