renamed app from app.verbruiksmanager.akp to com.verbruiksmanager.app

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "app.verbruiksmanager.apk",
+  "name": "com.verbruiksmanager.app",
   "app_id": "34645d4a",
   "type": "ionic-angular",
   "integrations": {
