--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@ionic-native/splash-screen": "^4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "angularfire2": "^5.0.0-rc.6",
     "chart.js": "^2.7.2",
     "cordova-android": "7.0.0",
